@@ -1,4 +1,4 @@
-.TH SG_SES "8" "SEPTEMBER 2010" "sg3_utils\-1.30" SG3_UTILS
+.TH SG_SES "8" "February 2011" "sg3_utils\-1.30" SG3_UTILS
 .SH NAME
 sg_ses \- send controls and fetch status from a SCSI Enclosure
 Services (SES) device
@@ -26,6 +26,11 @@ The most recent reference for this utility is the draft SCSI Enclosure
 Services 3 document T10/2149-D Revision 2 at http://ww.t10.org . Existing
 standards for SES and SES\-2 are ANSI INCITS 305\-1998 and ANSI INCITS
 448\-2008 respectively.
+.PP
+A tutorial on SES can be found here:
+http://www.snia.org/events/storage-developer2008/presentations/monday/RajendraDivecha_SCSI_SES.pdf .
+It contains both an overview and in depth information suitable for decoding
+the contents of some diagnostic pages used by SES.
 .SH OPTIONS
 Arguments to long options are mandatory for short options as well.
 The options are arranged in alphabetical order based on the long
@@ -157,7 +162,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2004\-2010 Douglas Gilbert
+Copyright \(co 2004\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
