@@ -2,7 +2,7 @@ sg3-utils (1.31-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sun, 06 Feb 2011 11:00:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Tue, 08 Feb 2011 17:00:00 -0500
 
 sg3-utils (1.30-0.1) unstable; urgency=low
 
